src/objects/QB_Invoice_File__c.object
<CustomObject>
    <description>Quickbooks Sales Invoices Data - Header and Lines</description>
    <fields>
        <fullName>ARAccout__c</fullName>
        <description>QB A/R control account</description>
        <label>ARAccount</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BalanceRemaining__c</fullName>
        <label>BalanceRemaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Line1__c</fullName>
        <label>Bill To Line1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Line2__c</fullName>
        <label>Bill To Line2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Line3__c</fullName>
        <label>Bill To Line3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Postal_Code__c</fullName>
        <label>Bill To Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <label>Bill To State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Country__c</fullName>
        <label>Bill to Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Dimension1</description>
        <label>Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Number__c</fullName>
        <description>QB Account #</description>
        <label>Customer Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Job_ID__c</fullName>
        <label>Customer Job ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FF_Dimension_2__c</fullName>
        <label>FF Dimension 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB__c</fullName>
        <label>FOB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Approval_Number__c</fullName>
        <label>Finance Approval Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IR2_Product__c</fullName>
        <formula>CASE(  LEFT(RefNumber__c ,2), 
&quot;AS&quot;, &quot;FFA Def Sale&quot;,
 &quot;LS&quot;, &quot;FFA Def Lease&quot;,
&quot;FFA Def Sale&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IR2 Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Site__c</fullName>
        <description>(Tax Code)</description>
        <label>Inventory Site</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QB_Sales_Invoice_Header__c</fullName>
        <label>QB Sales Invoice Header</label>
        <referenceTo>QB_Sales_Invoice_Header__c</referenceTo>
        <relationshipLabel>QB Invoice Files</relationshipLabel>
        <relationshipName>QB_Invoice_Files</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RS_Project_ID__c</fullName>
        <label>RS Project ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefNumber__c</fullName>
        <label>RefNumber</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Dimension 2</description>
        <label>Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesTaxCode__c</fullName>
        <label>SalesTaxCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesTaxItem__c</fullName>
        <label>SalesTaxItem</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesTaxPercentage__c</fullName>
        <label>SalesTaxPercentage</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesTaxTotal__c</fullName>
        <label>SalesTaxTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Method__c</fullName>
        <label>Ship Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Line1__c</fullName>
        <label>Ship To Line1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Line2__c</fullName>
        <label>Ship To Line2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Line3__c</fullName>
        <label>Ship To Line3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Postal_Code__c</fullName>
        <label>Ship To Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Postal_Sate__c</fullName>
        <label>Ship To Postal Sate</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_ID_Number__c</fullName>
        <label>State ID Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubTotal__c</fullName>
        <label>SubTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <label>System Size</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TxnDate__c</fullName>
        <label>TxnDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TxnId__c</fullName>
        <description>TxnID of invoice file which maps to Invoice Payment File</description>
        <label>TxnId</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TxnLine_Amount__c</fullName>
        <label>TxnLine Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TxnLine_CDNTaxCode__c</fullName>
        <label>TxnLine CDNTaxCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TxnLine_Class__c</fullName>
        <label>TxnLine Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TxnLine_Cost__c</fullName>
        <label>TxnLine Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TxnLine_Description__c</fullName>
        <label>TxnLine Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TxnLine_Item__c</fullName>
        <label>TxnLine Item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TxnLine_Other1__c</fullName>
        <label>TxnLine Other1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TxnLine_Other2__c</fullName>
        <label>TxnLine Other2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TxnLine_Quantity__c</fullName>
        <label>TxnLine Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TxnLine_SalesTaxCode__c</fullName>
        <label>TxnLine SalesTaxCode</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TxnLine_Service_Date__c</fullName>
        <label>TxnLine Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TxnLine_TaxCode__c</fullName>
        <label>TxnLine TaxCode</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>QB Invoice File</label>
    <listViews>
        <fullName>All</fullName>
        <columns>TxnDate__c</columns>
        <columns>Customer__c</columns>
        <columns>Customer_Job_ID__c</columns>
        <columns>RefNumber__c</columns>
        <columns>NAME</columns>
        <columns>IR2_Product__c</columns>
        <columns>TxnLine_Amount__c</columns>
        <columns>TxnLine_Cost__c</columns>
        <columns>TxnLine_Description__c</columns>
        <columns>TxnLine_Item__c</columns>
        <columns>SalesTaxTotal__c</columns>
        <columns>TxnLine_SalesTaxCode__c</columns>
        <columns>TxnLine_TaxCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>By_Date</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Customer_Account_Number__c</columns>
        <columns>QB_Sales_Invoice_Header__c</columns>
        <columns>RefNumber__c</columns>
        <columns>TxnDate__c</columns>
        <columns>TxnId__c</columns>
        <columns>TxnLine_Cost__c</columns>
        <columns>TxnLine_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TxnDate__c</field>
            <operation>lessThan</operation>
            <value>12/31/2008</value>
        </filters>
        <label>By Date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WithItemDesc</fullName>
        <columns>TxnId__c</columns>
        <columns>RefNumber__c</columns>
        <columns>Customer__c</columns>
        <columns>Customer_Job_ID__c</columns>
        <columns>TxnLine_Description__c</columns>
        <columns>TxnLine_Item__c</columns>
        <columns>TxnLine_Quantity__c</columns>
        <columns>TxnLine_Cost__c</columns>
        <columns>TxnLine_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>With Item Descriptions</label>
    </listViews>
    <nameField>
        <displayFormat>SIL-{000000000}</displayFormat>
        <label>QB Invoice File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Invoice Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>